--- a/_notebooks/2022-08-22-javanb.ipynb
+++ b/_notebooks/2022-08-22-javanb.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Notebook\n",
-    "> My very awesome Python Notebook\n",
+    "# Java Notebook\n",
+    "> My very awesome Java Notebook\n",
     "\n",
     "- toc: true\n",
     "- badges: true\n",
@@ -15,8 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -27,27 +31,30 @@
     }
    ],
    "source": [
-    "print(\"Hello World!\")"
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "      System.out.println(\"Hello World!\");\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "Main.main(null)\n",
+    "  "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
