primitives and bash nb set up

--- a/_notebooks/2022-08-22-javanb.ipynb
+++ b/_notebooks/2022-08-22-javanb.ipynb
@@ -10,18 +10,19 @@
     "- toc: true\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
+    "- categories: [java]\n",
     "- image: images/Java-Logo.png"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -53,7 +54,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
