--- a/_notebooks/2022-08-22-pythonnb.ipynb
+++ b/_notebooks/2022-08-22-pythonnb.ipynb
@@ -10,7 +10,7 @@
     "- toc: true\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
+    "- categories: [python]\n",
     "- image: images/Python-Logo.png"
    ]
   },
@@ -34,9 +34,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
    "codemirror_mode": {
@@ -45,7 +45,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "java",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
