--- a/_notebooks/2022-08-25-bashnb.ipynb
+++ b/_notebooks/2022-08-25-bashnb.ipynb
@@ -11,7 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [bash]\n",
-    "- image: images/bash.png"
+    "- image: images/bashs.png"
    ]
   },
   {
