--- a/_notebooks/2022-08-25-bashnb.ipynb
+++ b/_notebooks/2022-08-25-bashnb.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -138,26 +138,26 @@
      "output_type": "stream",
      "text": [
       "Checking remote...\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n",
+      "origin\thttps://github.com/peacekeeper6/fastpages.git (fetch)\n",
+      "origin\thttps://github.com/peacekeeper6/fastpages.git (push)\n",
       "Pulling...\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n",
+      "Already up to date.\n",
       "Staging changes...\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n",
-      "Committing changes...\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n",
-      "fatal: not a git repository (or any of the parent directories): .git\n"
+      "On branch master\n",
+      "Your branch is up to date with 'origin/master'.\n",
+      "\n",
+      "Changes to be committed:\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\n",
+      "\t\u001b[32mmodified:   _notebooks/2022-08-25-bashnb.ipynb\u001b[m\n",
+      "\t\u001b[32mnew file:   _notebooks/2022-08-26-test-notebook.ipynb\u001b[m\n",
+      "\t\u001b[32mnew file:   _notebooks/2022-08-27-tests.md\u001b[m\n",
+      "\n",
+      "Committing changes...\n"
      ]
-    },
-    {
-     "ename": "",
-     "evalue": "128",
-     "output_type": "error",
-     "traceback": []
     }
    ],
    "source": [
-    "cd\n",
+    "cd ~/vscode/fastpages\n",
     "echo \"Checking remote...\"\n",
     "git remote -v\n",
     "echo \"Pulling...\"\n",
