--- a/_notebooks/2022-08-25-bashnb.ipynb
+++ b/_notebooks/2022-08-25-bashnb.ipynb
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "cd ~/vscode/fastpages/_notebooks\n",
+    "cd ~/vscode/fastpages/_notebooks \n",
     "ls\n",
     "echo \"\"\n",
     "echo \"Creating new notebook...\"\n",
@@ -335,7 +335,7 @@
    ],
    "source": [
     "# This example is more roboust\n",
-    "cd ~/vscode/fastpages/_notebooks\n",
+    "cd ~/vscode/fastpages/_notebooks #Mr. M example using .md files instead\n",
     "\n",
     "file=\"2022-08-27-tests.md\"\n",
     "if [ -f \"$file\" ] || [ -e \"$file\"]; then\n",
