bash nb for now

--- a/_notebooks/2022-08-24-primitives.ipynb
+++ b/_notebooks/2022-08-24-primitives.ipynb
@@ -104,16 +104,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hack\n",
-    "> Points per game, PPG, calculator"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -121,50 +113,43 @@
    },
    "outputs": [
     {
-     "ename": "IncompleteSourceException",
-     "evalue": "public class ScanPPG {\n    public static void main(String[] args) {\n    Scanner input;\n\n    input = new Scanner(System.in);\n    System.out.print(\"Enter a Player: \"); // personal note: do not use ln when making input\n    try {\n        String sampleInputString = input.nextString();\n        System.out.println(\"Nice choice, unless you chose Steph Curry\");\n    } catch (Exception e) {\n        System.out.println(sampleInputString + \"is not a name\");\n    }\n    return sampleInputString;\n\n    // System.out.println(\"Get ready to break out the Google...\");\n\n    // input = new Scanner(System.in);\n    // System.out.print(\"How many games did your player play?\");\n    // try {\n    //     int gamesInputInt = input.nextInt();\n    //     System.out.println(gamesInputInt);\n    // } catch (Exception e) {\n    //     System.out.println(\"Not a number\");\n    // }\n    // return gamesInputInt;\n\n    // input = new Scanner(System.in);\n    // System.out.print(\"How many total points did your player score?\");\n    // try {\n    //     int pointsInputInt = input.nextInt();\n    //     System.out.println(pointsInputInt);\n    // } catch (Exception e) {\n    //     System.out.println(\"Not a number\");\n    // }\n    // return pointsInputInt;\n\n    // System.out.println(sampleInputString + \"averaged\" + pointsInputInt/gamesInputInt + \"a game\");\n}\nScanPPG.main(null);",
+     "ename": "CompilationException",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1m\u001b[31mIncomplete input:\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mpublic class ScanPPG {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    public static void main(String[] args) {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    Scanner input;\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    input = new Scanner(System.in);\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    System.out.print(\"Enter a Player: \"); // personal note: do not use ln when making input\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    try {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        String sampleInputString = input.nextString();\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        System.out.println(\"Nice choice, unless you chose Steph Curry\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    } catch (Exception e) {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        System.out.println(sampleInputString + \"is not a name\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    return sampleInputString;\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // System.out.println(\"Get ready to break out the Google...\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // input = new Scanner(System.in);\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // System.out.print(\"How many games did your player play?\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // try {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    //     int gamesInputInt = input.nextInt();\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    //     System.out.println(gamesInputInt);\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // } catch (Exception e) {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    //     System.out.println(\"Not a number\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // return gamesInputInt;\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // input = new Scanner(System.in);\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // System.out.print(\"How many total points did your player score?\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // try {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    //     int pointsInputInt = input.nextInt();\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    //     System.out.println(pointsInputInt);\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // } catch (Exception e) {\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    //     System.out.println(\"Not a number\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // }\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // return pointsInputInt;\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m    // System.out.println(sampleInputString + \"averaged\" + pointsInputInt/gamesInputInt + \"a game\");\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m}\u001b[0m",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mScanPPG.main(null);\u001b[0m"
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m# Hack\u001b[0m",
+      "\u001b[1m\u001b[31millegal character: '#'\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m> Points per game, PPG, calculator\u001b[0m",
+      "\u001b[1m\u001b[31millegal start of expression\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "# Hack\n",
+    "> Points per game, PPG, calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a Player: \n",
+      "Get ready to break out the Google...\n",
+      "\n",
+      "How many games did your player play?\n",
+      "How many total points did your player score?\n",
+      "Paul George averaged 24 points a game\n"
      ]
     }
    ],
@@ -176,38 +161,42 @@
     "    Scanner input;\n",
     "\n",
     "    input = new Scanner(System.in);\n",
-    "    System.out.print(\"Enter a Player: \"); // personal note: do not use ln when making input\n",
-    "    try {\n",
-    "        String sampleInputString = input.nextString();\n",
-    "        System.out.println(\"Nice choice, unless you chose Steph Curry\");\n",
-    "    } catch (Exception e) {\n",
-    "        System.out.println(sampleInputString + \"is not a name\");\n",
-    "    }\n",
-    "    return sampleInputString;\n",
+    "    System.out.print(\"Enter a Player: \" + System.lineSeparator()); // personal note: do not use ln when making input\n",
+    "    String name = input.nextLine();\n",
+    "    // try {\n",
+    "    //     String sampleInputString = input.nextLine();\n",
+    "    //     System.out.println(\"Nice choice, unless you chose Steph Curry\");\n",
+    "    // } catch (Exception e) {\n",
+    "    //     System.out.println(\"Not a name\");\n",
+    "    // }\n",
+    "    input.close();\n",
     "\n",
-    "    // System.out.println(\"Get ready to break out the Google...\");\n",
-    "\n",
-    "    input = new Scanner(System.in);\n",
-    "    System.out.print(\"How many games did your player play?\");\n",
-    "    try {\n",
-    "        int gamesInputInt = input.nextInt();\n",
-    "        System.out.println(gamesInputInt);\n",
-    "    } catch (Exception e) {\n",
-    "        System.out.println(\"Not a number\");\n",
-    "    }\n",
-    "    return gamesInputInt;\n",
+    "    System.out.println(\"Get ready to break out the Google...\" + System.lineSeparator());\n",
     "\n",
     "    input = new Scanner(System.in);\n",
-    "    System.out.print(\"How many total points did your player score?\");\n",
-    "    try {\n",
-    "        int pointsInputInt = input.nextInt();\n",
-    "        System.out.println(pointsInputInt);\n",
-    "    } catch (Exception e) {\n",
-    "        System.out.println(\"Not a number\");\n",
-    "    }\n",
-    "    return pointsInputInt;\n",
+    "    System.out.print(\"How many games did your player play?\" + System.lineSeparator());\n",
+    "    int games = input.nextInt();\n",
+    "    // try {\n",
+    "    //     int gamesInputInt = input.nextInt();\n",
+    "    //     System.out.println(gamesInputInt);\n",
+    "    // } catch (Exception e) {\n",
+    "    //     System.out.println(\"Not a number\");\n",
+    "    // }\n",
+    "    input.close();\n",
     "\n",
-    "    System.out.println(sampleInputString + \"averaged\" + pointsInputInt/gamesInputInt + \"a game\");\n",
+    "    input = new Scanner(System.in);\n",
+    "    System.out.print(\"How many total points did your player score?\" + System.lineSeparator());\n",
+    "    int points = input.nextInt();\n",
+    "    // try {\n",
+    "    //     int pointsInputInt = input.nextInt();\n",
+    "    //     System.out.println(pointsInputInt);\n",
+    "    // } catch (Exception e) {\n",
+    "    //     System.out.println(\"Not a number\");\n",
+    "    // }\n",
+    "    input.close();\n",
+    "\n",
+    "    System.out.println(name + \" averaged \" + points/games + \" points a game\");\n",
+    "    }\n",
     "}\n",
     "ScanPPG.main(null);"
    ]
