this is why paul george is the goat

--- a/_notebooks/2022-08-24-primitives.ipynb
+++ b/_notebooks/2022-08-24-primitives.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -145,11 +145,13 @@
      "output_type": "stream",
      "text": [
       "Enter a Player: \n",
+      "Nice choice, unless you chose Steph Curry\n",
       "Get ready to break out the Google...\n",
-      "\n",
-      "How many games did your player play?\n",
       "How many total points did your player score?\n",
-      "Paul George averaged 24 points a game\n"
+      "Not bad\n",
+      "How many games did your player play?\n",
+      "That's a lot\n",
+      "Paul George averaged 24.3 points a game\n"
      ]
     }
    ],
@@ -163,39 +165,39 @@
     "    input = new Scanner(System.in);\n",
     "    System.out.print(\"Enter a Player: \" + System.lineSeparator()); // personal note: do not use ln when making input\n",
     "    String name = input.nextLine();\n",
-    "    // try {\n",
-    "    //     String sampleInputString = input.nextLine();\n",
-    "    //     System.out.println(\"Nice choice, unless you chose Steph Curry\");\n",
-    "    // } catch (Exception e) {\n",
-    "    //     System.out.println(\"Not a name\");\n",
-    "    // }\n",
+    "    try {\n",
+    "        System.out.println(\"Nice choice, unless you chose Steph Curry\");\n",
+    "    } catch (Exception e) {\n",
+    "        System.out.println(\"Not a name\");\n",
+    "    }\n",
     "    input.close();\n",
     "\n",
-    "    System.out.println(\"Get ready to break out the Google...\" + System.lineSeparator());\n",
-    "\n",
-    "    input = new Scanner(System.in);\n",
-    "    System.out.print(\"How many games did your player play?\" + System.lineSeparator());\n",
-    "    int games = input.nextInt();\n",
-    "    // try {\n",
-    "    //     int gamesInputInt = input.nextInt();\n",
-    "    //     System.out.println(gamesInputInt);\n",
-    "    // } catch (Exception e) {\n",
-    "    //     System.out.println(\"Not a number\");\n",
-    "    // }\n",
-    "    input.close();\n",
+    "    System.out.println(\"Get ready to break out the Google...\");\n",
     "\n",
     "    input = new Scanner(System.in);\n",
     "    System.out.print(\"How many total points did your player score?\" + System.lineSeparator());\n",
-    "    int points = input.nextInt();\n",
-    "    // try {\n",
-    "    //     int pointsInputInt = input.nextInt();\n",
-    "    //     System.out.println(pointsInputInt);\n",
-    "    // } catch (Exception e) {\n",
-    "    //     System.out.println(\"Not a number\");\n",
-    "    // }\n",
+    "    double points = input.nextInt();\n",
+    "    try {\n",
+    "        System.out.println(\"Not bad\");\n",
+    "    } catch (Exception e) {\n",
+    "        System.out.println(\"Not a number\");\n",
+    "    }\n",
     "    input.close();\n",
     "\n",
-    "    System.out.println(name + \" averaged \" + points/games + \" points a game\");\n",
+    "    input = new Scanner(System.in);\n",
+    "    System.out.print(\"How many games did your player play?\" + System.lineSeparator());\n",
+    "    double games = input.nextInt();\n",
+    "    try {\n",
+    "        System.out.println(\"That's a lot\");\n",
+    "    } catch (Exception e) {\n",
+    "        System.out.println(\"Not a number\");\n",
+    "    }\n",
+    "    input.close();\n",
+    "\n",
+    "    double PPG = points/games;\n",
+    "    double rounded = Math.round(PPG * 10.0) / 10.0;\n",
+    "\n",
+    "    System.out.println(name + \" averaged \" + rounded + \" points a game\");\n",
     "    }\n",
     "}\n",
     "ScanPPG.main(null);"
