primitives nb done

--- a/_notebooks/2022-08-24-primitives.ipynb
+++ b/_notebooks/2022-08-24-primitives.ipynb
@@ -107,13 +107,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hack\n",
-    "> Points per game, PPG, calculator"
+    "# Code.org"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -124,14 +123,130 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a Player: \n",
+      "Result: 7.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "int a = 3;\n",
+    "int b = 10;\n",
+    "double c = 2.5;\n",
+    "c = 2 * a - 15 / b + c;\n",
+    "\n",
+    "System.out.println(\"Result: \" + c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Casting\n",
+    "> Used in Java to change data types of variables\n",
+    " - Doubles are rounded to the nearest integer (int) (x + 0.5) or (int) (x - 0.5) for negative numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - produced because int/int\n",
+      "1.5 - produced because double/int\n",
+      "1.5 - produced because int/double\n",
+      "1.5 - produced because double/int\n",
+      "69.8 - This result is possible because the number turns into a double, meaning that there is no truncation\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Casting {\n",
+    "    public static void main(String[] args) {\n",
+    "    System.out.println (6/4 + \" - produced because int/int\");\n",
+    "    System.out.println(6.0/4 + \" - produced because double/int\") ;\n",
+    "    System.out.println(6/4.0 + \" - produced because int/double\");\n",
+    "    System.out.println((double) 6/4 + \" - produced because double/int\");\n",
+    "    }\n",
+    "    public static void ex1(String[] args) {\n",
+    "        double a = 13.124;\n",
+    "        // int b = a; <- This result would not be produced because double to int conversion results in loss/truncation of numbers\n",
+    "        // System.out.println(b);\n",
+    "    }\n",
+    "    public static void ex2(String[] args) {\n",
+    "        // int a = 6.75; \n",
+    "        // int b = 124;\n",
+    "        // System.out.println(a + b); <- Thus, this result is not possible using the compiler. However, doing this manually would result in 131 because rounding is needed for ints. \n",
+    "    }\n",
+    "    public static void ex3(String[] args) {\n",
+    "        int a = 82;\n",
+    "        double b = 12.2;\n",
+    "        System.out.println(a - b + \" - This result is possible because the number turns into a double, meaning that there is no truncation\"); \n",
+    "    }\n",
+    "}\n",
+    "Casting.main(null);\n",
+    "Casting.ex1(null);\n",
+    "Casting.ex2(null);\n",
+    "Casting.ex3(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hack\n",
+    "> Points per game, PPG, calculator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- int is used for points, regular season games, and playoff games, which is necessary because these can only be whole numbers\n",
+    "- double is used to calculate PPG, which can have decimals in it. Math function is used to limit number of decimals to standard usage\n",
+    "- boolean is necessary to ensure player is using google for questions following\n",
+    "- string is necessary for player name\n",
+    "- For results, double is used to create a number with decimal, which is the standard for calculating PPG in NBA. Thus, things like integer would be unncessary because they are not the standard\n",
+    "- Compound assignment operator used in calculating total games played, regular season + playoffs, in order to get total points/games for PPG calculation\n",
+    "\n",
+    "\n",
+    "\n",
+    "Perform arithmetic expressions and assignment in a program code Code.org Lesson\n",
+    "\n",
+    "Determine what is result is in a variable as a result of an data type and expression (ie integer vs double)\n",
+    "Perform an arithmetic expressions that uses casting, add comments that show how it produces desired result. Learn more by watching this College Board video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a Player\n",
       "Nice choice, unless you chose Steph Curry\n",
-      "Get ready to break out the Google...\n",
-      "How many total points did your player score?\n",
+      "True or false: you have Google open right now\n",
+      "Google will be important...\n",
+      "How many total points did your player score (counting playoffs)?\n",
       "Not bad\n",
-      "How many games did your player play?\n",
+      "How many games did your player play in the regular season?\n",
       "That's a lot\n",
-      "Paul George averaged 24.3 points a game\n"
+      "If your player made the playoffs, how many games did they play there?\n",
+      "Total generating...\n",
+      "Paul George averaged 24.0 points a game\n"
      ]
     }
    ],
@@ -143,7 +258,7 @@
     "    Scanner input;\n",
     "\n",
     "    input = new Scanner(System.in);\n",
-    "    System.out.print(\"Enter a Player: \" + System.lineSeparator()); // personal note: do not use ln when making input\n",
+    "    System.out.print(\"Enter a Player\" + System.lineSeparator()); // personal note: do not use ln when making input\n",
     "    String name = input.nextLine();\n",
     "    try {\n",
     "        System.out.println(\"Nice choice, unless you chose Steph Curry\");\n",
@@ -152,11 +267,19 @@
     "    }\n",
     "    input.close();\n",
     "\n",
-    "    System.out.println(\"Get ready to break out the Google...\");\n",
+    "    input = new Scanner(System.in);\n",
+    "    System.out.print(\"True or false: you have Google open right now\" + System.lineSeparator());\n",
+    "    boolean resp = input.nextBoolean();\n",
+    "    try {\n",
+    "        System.out.println(\"Google will be important...\");\n",
+    "    } catch (Exception e) {\n",
+    "        System.out.println(\"Not true/false\");\n",
+    "    }\n",
+    "    input.close();\n",
     "\n",
     "    input = new Scanner(System.in);\n",
-    "    System.out.print(\"How many total points did your player score?\" + System.lineSeparator());\n",
-    "    double points = input.nextInt();\n",
+    "    System.out.print(\"How many total points did your player score (counting playoffs)?\" + System.lineSeparator());\n",
+    "    int points = input.nextInt(); \n",
     "    try {\n",
     "        System.out.println(\"Not bad\");\n",
     "    } catch (Exception e) {\n",
@@ -165,13 +288,24 @@
     "    input.close();\n",
     "\n",
     "    input = new Scanner(System.in);\n",
-    "    System.out.print(\"How many games did your player play?\" + System.lineSeparator());\n",
-    "    double games = input.nextInt();\n",
+    "    System.out.print(\"How many games did your player play in the regular season?\" + System.lineSeparator());\n",
+    "    int games = input.nextInt();\n",
     "    try {\n",
     "        System.out.println(\"That's a lot\");\n",
     "    } catch (Exception e) {\n",
     "        System.out.println(\"Not a number\");\n",
     "    }\n",
+    "    input.close();\n",
+    "\n",
+    "    input = new Scanner(System.in);\n",
+    "    System.out.print(\"If your player made the playoffs, how many games did they play there?\" + System.lineSeparator());\n",
+    "    int playoffgames = input.nextInt();\n",
+    "    try {\n",
+    "        System.out.println(\"Total generating...\");\n",
+    "    } catch (Exception e) {\n",
+    "        System.out.println(\"Not a number\");\n",
+    "    }\n",
+    "    games += playoffgames; //result is playoff games being added to regular season games\n",
     "    input.close();\n",
     "\n",
     "    double PPG = points/games;\n",
