fix md accidents

--- a/_notebooks/2022-08-24-primitives.ipynb
+++ b/_notebooks/2022-08-24-primitives.ipynb
@@ -29,11 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -113,11 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -148,11 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -213,24 +201,13 @@
     "- boolean is necessary to ensure player is using google for questions following\n",
     "- string is necessary for player name\n",
     "- For results, double is used to create a number with decimal, which is the standard for calculating PPG in NBA. Thus, things like integer would be unncessary because they are not the standard\n",
-    "- Compound assignment operator used in calculating total games played, regular season + playoffs, in order to get total points/games for PPG calculation\n",
-    "\n",
-    "\n",
-    "\n",
-    "Perform arithmetic expressions and assignment in a program code Code.org Lesson\n",
-    "\n",
-    "Determine what is result is in a variable as a result of an data type and expression (ie integer vs double)\n",
-    "Perform an arithmetic expressions that uses casting, add comments that show how it produces desired result. Learn more by watching this College Board video"
+    "- Compound assignment operator used in calculating total games played, regular season + playoffs, in order to get total points/games for PPG calculation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -328,7 +305,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
